added base layout for component

--- a/src/components/common/TopHeader/TopHeader.sass
+++ b/src/components/common/TopHeader/TopHeader.sass
@@ -1,7 +1,10 @@
 @import "src/styles/styles.sass"
 .topheader
-  color: $secondary-text
+  height: 36px
+  color: #FFFFFF
   &__inner
+    padding-bottom: 8px
+    padding-top: 8px
     display: flex
     justify-content: space-between
     margin-right: auto
@@ -11,4 +14,9 @@
     display: flex
     gap: 24px
     &-item
-      padding: 8px
+    &-delivery
+
+      background: none
+      border: none
+      color: $secondary-text
+
