--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,4 +1,14 @@
+$primary-color: #222222
+$secondary-color: #EBEBEB
+$light-secondary-color: #F6F6F6
+$accent-color: #CFFF5E
+
+
 $secondary-text: #777777
 
-.secondary-color
+*
+  box-sizing: border-box
+
+a
+  text-decoration: none
   color: $secondary-text
