--- a/src/components/common/TopHeader/TopHeader.sass
+++ b/src/components/common/TopHeader/TopHeader.sass
@@ -1,7 +1,9 @@
 @import "src/styles/styles.sass"
 .topheader
-  color: $secondary-text
+  height: 33px
+  color: #FFFFFF
   &__inner
+    height: 100%
     display: flex
     justify-content: space-between
     margin-right: auto
@@ -10,5 +12,11 @@
   &__nav
     display: flex
     gap: 24px
-    &-item
-      padding: 8px
+    align-items: center
+    &-delivery
+
+      background: none
+      border: none
+      color: $secondary-text
+
+
