--- a/src/components/common/TopHeader/TopHeader.sass
+++ b/src/components/common/TopHeader/TopHeader.sass
@@ -1,10 +1,8 @@
 @import "src/styles/styles.sass"
 .topheader
-  height: 36px
-  color: #FFFFFF
+  height: 33px
   &__inner
-    padding-bottom: 8px
-    padding-top: 8px
+    height: 100%
     display: flex
     justify-content: space-between
     margin-right: auto
@@ -13,10 +11,7 @@
   &__nav
     display: flex
     gap: 24px
-    &-item
+    align-items: center
     &-delivery
-
-      background: none
-      border: none
       color: $secondary-text
 
