--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -9,6 +9,12 @@ $secondary-text: #777777
 *
   box-sizing: border-box
 
+body
+  margin: 0
 a
   text-decoration: none
   color: $secondary-text
+
+button
+  border: none
+  background: inherit
