Added svg icons for header links and menu

--- a/src/components/common/BottomHeader/BottomHeader.sass
+++ b/src/components/common/BottomHeader/BottomHeader.sass
@@ -14,14 +14,20 @@
     max-width: 80%
     align-items: center
   &__menu
-    color: #FFFFFF
     background: none
     border: none
+    cursor: pointer
   &__nav
     display: flex
     gap: 36px
     a
       color: #FFFFFF
+    &-link
+      display: flex
+      flex-direction: column
+      align-items: center
+
   &__logo
     width: 130px
     height: auto
+
