--- a/src/components/common/BottomHeader/BottomHeader.sass
+++ b/src/components/common/BottomHeader/BottomHeader.sass
@@ -8,10 +8,9 @@
     padding-top: 18px
     display: flex
     justify-content: space-between
-    margin-right: auto
-    margin-left: auto
+    margin-right: 10%
+    margin-left: 10%
     height: 100%
-    max-width: 80%
     align-items: center
   &__menu
     background: none
@@ -26,6 +25,9 @@
       display: flex
       flex-direction: column
       align-items: center
+      &:first-child
+        margin-left: 36px
+
 
   &__logo
     width: 130px
