--- a/src/components/common/TopHeader/TopHeader.sass
+++ b/src/components/common/TopHeader/TopHeader.sass
@@ -5,9 +5,8 @@
     height: 100%
     display: flex
     justify-content: space-between
-    margin-right: auto
-    margin-left: auto
-    max-width: 80%
+    margin-right: 10%
+    margin-left: 10%
   &__nav
     display: flex
     gap: 24px
