removed duplicated style imports

--- a/src/components/common/BottomHeader/BottomHeader.sass
+++ b/src/components/common/BottomHeader/BottomHeader.sass
@@ -1,4 +1,4 @@
-@import "src/styles/styles.sass"
+@use "src/styles/variables.sass" as *
 .bottomheader
   background: $primary-color
   color: #FFFFFF
