--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,11 +1,4 @@
-$primary-color: #222222
-$secondary-color: #EBEBEB
-$light-secondary-color: #F6F6F6
-$accent-color: #CFFF5E
-
-
-$secondary-text: #777777
-
+@use "./variables.sass" as *
 *
   box-sizing: border-box
 
@@ -13,7 +6,7 @@ body
   margin: 0
 a
   text-decoration: none
-  color: $secondary-text
+  color: $secondary-text-color
 
 button
   border: none
