--- a/src/components/UI/SearchBar/SearchBar.sass
+++ b/src/components/UI/SearchBar/SearchBar.sass
@@ -1,4 +1,4 @@
-@import "../../../styles/styles"
+@use "../../../styles/variables.sass" as *
 .searchbar
   position: relative
   height: 100%
@@ -14,7 +14,7 @@
     margin-left: 15px
     margin-right: 15px
     &::placeholder
-      color: $secondary-text
+      color: $secondary-text-color
     &:focus
       outline: none
   &__search-button
