--- a/src/components/common/TopHeader/TopHeader.sass
+++ b/src/components/common/TopHeader/TopHeader.sass
@@ -1,4 +1,4 @@
-@import "src/styles/styles.sass"
+@use "src/styles/variables.sass" as *
 .topheader
   height: 33px
   &__inner
@@ -12,6 +12,6 @@
     gap: 24px
     align-items: center
     &-delivery
-      color: $secondary-text
+      color: $secondary-text-color
 
 
