in component Carousel buttons swiping banners now show only when hover

--- a/src/components/UI/Carousel/Carousel.sass
+++ b/src/components/UI/Carousel/Carousel.sass
@@ -25,6 +25,14 @@
     cursor: pointer
     padding: 10px
     z-index: 1
+    span
+      font-size: xx-large
+      color:  $primary-color
+      display: none
+    &:hover > span
+      display: inline
+
+
   &__button-prev
       left: 0
   &__button-next
