--- a/src/components/UI/SearchBar/SearchBar.sass
+++ b/src/components/UI/SearchBar/SearchBar.sass
@@ -7,7 +7,7 @@
   display: flex
   justify-content: space-between
   flex-grow: 0.8
-  &-input
+  &__input
     flex-grow: 1
     border: none
     box-shadow: none
