--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -7,3 +7,6 @@ $button-focused-color: #222222
 $button-disabled-color: #D9D9D9
 
 $secondary-text-color: #777777
+
+$card-box-shadow: 0px 4px 4px 0px rgba(34, 34, 34, 0.1)
+
