added link to HomePage when clicking on logo in header

--- a/src/components/common/BottomHeader/BottomHeader.sass
+++ b/src/components/common/BottomHeader/BottomHeader.sass
@@ -32,4 +32,8 @@
   &__logo
     width: 130px
     height: auto
+    &-wrapper
+      height: 100%
+      display: flex
+      align-items: center
 
