refactoring sass variables

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,12 +1,16 @@
+//colors
 $primary-color: #222222
 $secondary-color: #EBEBEB
 $light-secondary-color: #F6F6F6
 $accent-color: #CFFF5E
 
+//buttons
 $button-focused-color: #222222
 $button-disabled-color: #D9D9D9
 
+//fonts
 $secondary-text-color: #777777
 
+//box shadow
 $card-box-shadow: 0px 4px 4px 0px rgba(34, 34, 34, 0.1)
 
