made headers fixed by adding HeadersWrapper component and applying 'position: fixed' CSS style.

--- a/src/components/common/TopHeader/TopHeader.sass
+++ b/src/components/common/TopHeader/TopHeader.sass
@@ -1,6 +1,7 @@
 @use "src/styles/variables.sass" as *
 .topheader
   height: 33px
+  background: white
   &__inner
     height: 100%
     display: flex
