--- a/src/components/UI/SearchBar/SearchBar.sass
+++ b/src/components/UI/SearchBar/SearchBar.sass
@@ -1,22 +1,38 @@
 @use "../../../styles/variables.sass" as *
 .searchbar
-  position: relative
   height: 100%
   background: white
   border-radius: 5px
-  display: flex
-  justify-content: space-between
-  flex-grow: 0.8
+  width: 750px
+  overflow: hidden
+  &__inner
+    display: flex
+    justify-content: space-between
+    position: relative
+    height: inherit
+    z-index: 100
+    width: 100%
+
+  &__modal
+    position: absolute
+    top: 120px
+    width: 750px
+    height: 100px
+    z-index: 100
+    background: white
+    border-radius: 0 0 5px 5px
+  &-active
+    border-radius: 5px 5px 0 0
   &__input
-    flex-grow: 1
+    width: 100%
+    padding-left: 15px
     border: none
     box-shadow: none
-    margin-left: 15px
-    margin-right: 15px
     &::placeholder
       color: $secondary-text-color
-    &:focus
+    &-active
       outline: none
+
   &__search-button
     position: absolute
     right: 5px
