--- a/src/components/UI/SearchBar/SearchBar.sass
+++ b/src/components/UI/SearchBar/SearchBar.sass
@@ -3,35 +3,36 @@
   height: 100%
   background: white
   border-radius: 5px
-  width: 750px
-  overflow: hidden
+  flex-grow: 0.8
+  position: relative
   &__inner
     display: flex
     justify-content: space-between
-    position: relative
     height: inherit
     z-index: 100
-    width: 100%
-
+    position: relative
   &__modal
     position: absolute
-    top: 120px
-    width: 750px
+    top: 70px
+    width: 100%
     height: 100px
-    z-index: 100
+    z-index: 1000
     background: white
     border-radius: 0 0 5px 5px
-  &-active
-    border-radius: 5px 5px 0 0
+    display: none
+    &-active
+      display: flex
   &__input
     width: 100%
     padding-left: 15px
     border: none
     box-shadow: none
+    border-radius: 5px
     &::placeholder
       color: $secondary-text-color
     &-active
       outline: none
+      border-radius: 5px 5px 0 0
 
   &__search-button
     position: absolute
