added some global styles

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -3,6 +3,8 @@ $primary-color: #222222
 $secondary-color: #EBEBEB
 $light-secondary-color: #F6F6F6
 $accent-color: #CFFF5E
+$rating-color: #FAAA10
+$interactive-blue: #6763FF
 
 //buttons
 $button-focused-color: #222222
@@ -14,3 +16,5 @@ $secondary-text-color: #777777
 //box shadow
 $card-box-shadow: 0px 4px 4px 0px rgba(34, 34, 34, 0.1)
 
+//other
+$dots-color: #818181
