--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -7,8 +7,11 @@ body
 a
   text-decoration: none
   color: $secondary-text-color
-
+h1
+  margin: 0
 button
   border: none
   background: inherit
   cursor: pointer
+.interactive
+  color: $interactive-blue
