--- a/src/components/common/CatalogPageWrapper/CatalogPageWrapper.sass
+++ b/src/components/common/CatalogPageWrapper/CatalogPageWrapper.sass
@@ -1,5 +1,6 @@
+@use "../../../styles/variables" as *
 .catalog-page-wrapper
   margin-top: 40px
   &__path
     &:first-child
-      color: #6763FF
+      color: $interactive-blue
