--- a/src/components/common/BottomHeader/BottomHeader.sass
+++ b/src/components/common/BottomHeader/BottomHeader.sass
@@ -8,8 +8,7 @@
     padding-top: 18px
     display: flex
     justify-content: space-between
-    margin-right: 12.5%
-    margin-left: 12.5%
+    margin: 0 12.5%
     height: 100%
     align-items: center
   &__menu
@@ -25,7 +24,7 @@
       flex-direction: column
       align-items: center
       &:first-child
-        margin-left: 36px
+        //margin-left: 36px
   &__logo
     width: 130px
     height: auto
